# my_own_page_v4

./: .dockerignore  .env  .env.example  .gitignore  LICENSE  README.md  docker-compose.yaml  sync-env-to-gh-secrets.sh
.github/workflows/: ci-cd.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  main.py  redis_client.py
backend/app/models/: __init__.py  profile.py  profile_version.py  user.py
backend/app/routers/: auth.py  profiles.py  public.py
backend/app/schemas/: auth.py  profile.py  profile_data.py  public.py
backend/app/services/: auth_service.py  draft_service.py  profile_service.py  publish_service.py
backend/app/utils/: logging_config.py  security.py
backend/tests/: conftest.py  test_auth.py  test_draft.py  test_public.py  test_publish.py
frontend1/: Dockerfile  app.py  requirements.txt
frontend1/app/: __init__.py  api_client.py  config.py
frontend1/templates/: base.html
frontend2/: Dockerfile  app.py  requirements.txt
frontend2/app/: __init__.py  api_client.py  config.py
frontend2/templates/: base.html
k8s/: ingress.yaml
k8s/backend/: backend-configmap.yaml  backend-deployment.yaml  backend-secrets.yaml  backend-service.yaml
k8s/cert-manager/: cluster-issuer.yaml
k8s/db/: postgres-configmap.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-secret.yaml  postgres-service.yaml
k8s/frontend1/: frontend1-configmap.yaml  (+3 more)
reverse-proxy/: nginx.conf
(+19 files in other folders)
